add_subdirectory(utils)

include_directories(${CMAKE_CURRENT_LIST_DIR}/utils)
add_compile_options(-O3 -include log.h)
link_directories(${CMAKE_ARCHIVE_DIR} ${CMAKE_LIBRARY_DIR} )
link_libraries(-lutils)

add_subdirectory(ch01)
add_subdirectory(ch02)
add_subdirectory(ch03)
add_subdirectory(ch04)
add_subdirectory(ch05)
add_subdirectory(ch06)
add_subdirectory(ch07)
add_subdirectory(ch08)
add_subdirectory(ch09)
add_subdirectory(ch10)
# add_subdirectory(appendixA)
# add_subdirectory(appendixB)
# add_subdirectory(appendixC)

